[package]
name = "clone-macro"
version = "0.1.0"
edition = "2021"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
description = "Super simple utility macro for cloning before moving into a move closure/block."
homepage = "https://github.com/jquesada2016/clone-macro-rs"
repository = "https://github.com/jquesada2016/clone-macro-rs"
license = "MIT"
categories = ["development-tools", "rust-patterns"]
keywords = ["macro", "clone", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
